<resources>
    <string name="app_name">SalaMan</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_store_info">StoreInfo</string>
    <string name="store_info_item_title">Thông tin cửa hàng</string>
    <string name="store_info_item_shop_name">Tên cửa hàng</string>
    <string name="store_info_item_contact_number">Số ĐT giao dịch</string>
    <string name="store_info_item_address">Địa chỉ</string>
    <string name="store_info_item_store_adress">Địa chỉ cửa hàng:</string>
    <string name="store_info_item_working_hours">Thời gian làm việc</string>
    <string name="store_info_item_working_hours_example">VD:\n\t\tT2&#8211;T6:\t\t8h00&#8211;12h00\n\t\t\t\t\t\t\t\t\t13h00&#8211;18h00\n\t\tT7:\t\t\t\t\t8h00&#8211;12h00\n\t\tCN và ngày lễ nghỉ</string>
    <string name="store_info_item_product_type">Ngành hàng:</string>
    <string name="store_info_item_food">Thực Phẩm</string>
    <string name="store_info_item_fashion">Thời Trang</string>
    <string name="store_info_item_technology">Công Nghệ</string>
    <string name="store_info_item_family_stuff">Gia Dụng</string>
    <string name="store_info_item_office">Văn Phòng Phẩm</string>
    <string name="store_info_item_book">Sách</string>
    <string name="store_info_item_mummy_baby"><![CDATA[Mẹ & Bé]]></string>
    <string name="store_info_item_other_types"><u>Ngành khác</u></string>
    <string name="store_info_item_update">Cập nhật</string>
    <string name="store_info_create">Tạo shop</string>

    <string name="title_activity_main_screen">MainScreen</string>
    <string name="main_screen_item_account_info">Thông tin tài khoản</string>
    <string name="main_screen_item_store_info">Thông tin cửa hàng</string>
    <string name="main_screen_item_selling">Bán hàng</string>
    <string name="main_screen_item_report">Báo cáo</string>
    <string name="main_screen_item_category">Danh mục</string>
    <string name="main_screen_item_product_group">Nhóm sản phẩm</string>
    <string name="main_screen_item_product">Sản Phẩm</string>
    <string name="main_screen_item_customer_group">Nhóm khách hàng</string>
    <string name="main_screen_item_customer">Khách hàng</string>
    <string name="main_screen_item_buying">Mua hàng</string>
    <string name="main_screen_item_buying_history">Lịch sử mua hàng</string>
    <string name="main_screen_item_lookup">Tra cứu</string>
    <string name="main_screen_item_QA"><![CDATA[Q & A]]></string>
    <string name="main_screen_item_favorite">Yêu thích</string>

    <string name="title_fragment_customer">Khách Hàng</string>
    <string name="fragment_customer_item_address">Địa chỉ: </string>
    <string name="fragment_customer_item_phone_number">SĐT: </string>
    <string name="fragment_customer_item_name_example">Sala Group</string>
    <string name="fragment_customer_item_count_example">(99)</string>
    <string name="fragment_customer_item_phone_example">0123456789</string>

    <string name="title_fragment_customer_group">Nhóm Khách Hàng</string>
    <string name="title_fragment_add_customer_group"><u>Thêm nhóm Khách Hàng</u></string>
    <string name="notification_add_customer_group_ok">Đã thêm nhóm thành công</string>
    <string name="notification_add_customer_group_undo">Hoàn tác</string>

    <string name="title_fragment_customer_detail">Thông tin khách hàng</string>
    <string name="customer_detail_name">Họ Tên</string>
    <string name="customer_detail_phone">Số điện thoại</string>
    <string name="customer_detail_address">Thông tin địa chỉ</string>
    <string name="customer_detail_type">Nhóm khách</string>
    <string name="customer_detail_gender">Giới tính</string>
    <string name="customer_detail_birthday">Sinh nhật</string>
    <string name="customer_detail_gender_male">Nam</string>
    <string name="customer_detail_gender_female">Nữ</string>
    <string name="customer_detail_gender_None">Khác</string>


    <string name="btn_customer_group_cancel">Hủy</string>
    <string name="btn_customer_group_save">Lưu</string>
    <string name="btn_customer_group_delete">Xóa</string>

    <!-- login screen -->
    <string name="sala">SALA</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="login_with">Đăng nhập với</string>
    <string name="forgot_password">QUÊN MẬT KHẨU ?</string>
    <string name="sign_up">Đăng kí</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google+</string>
    <string name="login_other_account">Tài khoản khác</string>

    <!-- register screen -->
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="display_name">Tên hiển thị</string>
    <string name="gender">Giới tính</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="gender_other">Khác</string>
    <string name="address">Địa chỉ</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>

    <string name="facebook_app_id">886098914772907</string>
    <string name="title_activity_fragment_test">FragmentTestActivity</string>

    <string-array name="quan">
        <item>Quận 1</item>
        <item>Quận 2</item>
        <item>Quận 3</item>
        <item>Quận 4</item>
        <item>Quận 5</item>
        <item>Quận 6</item>
        <item>Quận 7</item>
        <item>Quận 8</item>
    </string-array>
    <string-array name="thanhpho">
        <item>TP.HCM</item>
        <item>Ha Noi</item>
        <item>Hai Phong</item>
        <item>Ba Ria - Vung Tau</item>
        <item>An Giang</item>
        <item>Nha Trang</item>
    </string-array>

    <string-array name="nhomkhach">
        <item>Bình thường</item>
        <item>Quen</item>
        <item>V.I.P 1</item>
        <item>V.I.P 2</item>
        <item>V.I.P 3</item>
    </string-array>
    <string name="title_account">Tài khoản</string>
    <string name="title_system">Hệ thống</string>

    <string name="navigation_change_password">Đổi mật khẩu</string>
    <string name="navigation_logout">Đăng xuất</string>

    <string name="navigation_passcode">Mã bảo vệ</string>
    <string name="navigation_language">Ngôn ngữ</string>
    <string name="navigation_notification">Thông báo</string>
    <string name="navigation_rate">Đánh giá ứng dụng</string>
    <string name="navigation_feedback">Góp ý nhà phát triển</string>
    <string name="navigation_about">Giới thiệu</string>
    <string name="navigation_help">Trợ giúp</string>

    <string name="account">Tên đăng nhập</string>
    <string name="register">Đăng ký</string>

    <string name="name">Họ tên</string>
    <string name="user_login">Tên đăng nhập</string>
    <string name="email_login">Email</string>
    <string name="title_activity_test">Test</string>

</resources>