<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.salagroup.salaman.activities.StoreInfoActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33b5e5"
            android:text="@string/store_info_item_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/store_info_item_shop_name"
            android:id="@+id/edtTenCuaHang" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/store_info_item_contact_number"
            android:id="@+id/edtSoDTGiaoDich" />

        <View
            style="@style/Divider"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#33b5e5"
            android:text="@string/store_info_item_store_adress" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/spnTinhThanh" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/spnQuanHuyen" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:inputType="textMultiLine"
            android:hint="@string/store_info_item_address"
            android:id="@+id/edtDiaChi" />

        <View
            style="@style/Divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#33b5e5"
            android:text="@string/store_info_item_working_hours" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:inputType="textMultiLine"
            android:hint="@string/store_info_item_working_hours_example" />

        <View
            style="@style/Divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#33b5e5"
            android:text="@string/store_info_item_stuff_type" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_food"
            android:id="@+id/ckbThucPham" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_fashion"
            android:id="@+id/ckbThoiTrang" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_technology"
            android:id="@+id/ckbCongNghe" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/store_info_item_other_types"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/tvNganhKhac" />

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_update"
            android:id="@+id/btnUpdate" />


    </LinearLayout>

</ScrollView>
