<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_other_types_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/chkGiaDung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_family_stuff" />

        <View style="@style/Divider" />

        <CheckBox
            android:id="@+id/chkVanPhongPham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_office" />

        <View style="@style/Divider" />

        <CheckBox
            android:id="@+id/chkSach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_book" />

        <View style="@style/Divider" />

        <CheckBox
            android:id="@+id/chkMeVaBe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_mummy_baby" />

    </LinearLayout>

</ScrollView>