<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    tools:context="com.salagroup.salaman.activities.CustomerDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fragment_title_magin_top"
        android:text="@string/title_fragment_customer_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cyan"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="433dp"
        android:isScrollContainer="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_detail_name"
                android:focusable="true"/>

            <EditText
                android:id="@+id/edtCustomerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_detail_phone" />

            <View style="@style/Divider" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/customer_detail_address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#33b5e5" />

            <Spinner
                android:id="@+id/spnTinhThanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <Spinner
                android:id="@+id/spnQuanHuyen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <EditText
                android:id="@+id/edtAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_info_item_address"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/customer_detail_birthday"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33b5e5" />

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dprBirthday"
                    android:calendarViewShown="false"
                    android:datePickerMode="calendar"
                    android:startYear="1990" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_detail_gender"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33b5e5" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tv_detail_customer_margin_left"
                    android:layout_marginStart="@dimen/tv_detail_customer_margin_left"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_detail_gender_male" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_marginLeft="@dimen/tv_detail_customer_margin_left"
                        android:layout_marginStart="@dimen/tv_detail_customer_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_detail_gender_female" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_marginLeft="@dimen/tv_detail_customer_margin_left"
                        android:layout_marginStart="@dimen/tv_detail_customer_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_detail_gender_None" />
                </RadioGroup>


            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_detail_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33b5e5" />

                <Spinner
                    android:id="@+id/spnTypeCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_customer_group_cancel" />

        <Button
            android:id="@+id/button2"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_customer_group_delete" />

        <Button
            android:id="@+id/btnUpdate"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_update" />

    </LinearLayout>


</LinearLayout>
