<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <ScrollView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvThongTinTaiKhoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_screen_item_account_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                style="@style/Divider"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/tvThongTinCuaHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_screen_item_store_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                style="@style/Divider"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/tvBanHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_screen_item_selling"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                style="@style/Divider"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/tvBaoCao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_screen_item_report"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                style="@style/Divider"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/main_screen_item_category"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#33b5e5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNhomSanPham"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_screen_item_product_group"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <View
                    style="@style/Divider"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/tvSanPham"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_screen_item_product"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <View
                    style="@style/Divider"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/tvNhomKhachHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_screen_item_customer_group"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <View
                    style="@style/Divider"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/tvKhachHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_screen_item_customer"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/main_screen_item_buying"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#33b5e5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLichSuMuaHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_screen_item_buying_history"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/main_screen_item_lookup"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#33b5e5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvQA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_screen_item_QA"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/main_screen_item_favorite"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#33b5e5" />

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>